<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    android:orientation="vertical"
    tools:context=".SavedCards">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="40dp"
        android:text="Card Details"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etUpdateCardnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Savedcardno"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#F80000"
        android:textColorHint="#5C000000" />

    <EditText
        android:id="@+id/etUpdateNameoncard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/savecardname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#070707"
        android:textColorHint="#5C000000" />

    <EditText
        android:id="@+id/etUpdateExpire_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/savedmandy"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#5C000000" />

    <EditText
        android:id="@+id/etUpdateCvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Savedcvv"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#5C000000" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:hint="Update and Confirm"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#009688" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:hint="Delete"
        android:textColorHint="#FBFBFB"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:backgroundTint="#009688" />

</LinearLayout>